# Emergency-Dispatch-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  info.md  mission.md  openenv.yaml  pyproject.toml  requirements.txt  run.md  tmp_baseline.py
emergency_dispatch/: __init__.py  env.py  grader.py  models.py  tasks.py
tests/: mock_openai_server.py  test_env_and_grader.py  test_grader_edge_cases.py  test_inference_format.py
