[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergency-dispatch-agent"
version = "0.1.0"
description = "OpenEnv ambulance dispatch environment with graded easy, medium, and hard tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "gradio",
    "gymnasium",
    "huggingface_hub",
    "numpy",
    "openai",
    "openenv-core>=0.2.0",
    "pydantic",
    "uvicorn",
]

[tool.setuptools.packages.find]
include = ["emergency_dispatch*"]
